--- a/preview/preview.html
+++ b/preview/preview.html
@@ -98,7 +98,6 @@
   </div>
 
   <!-- Scripts -->
-  <script src="../utils/generators.js"></script>
-  <script src="preview.js"></script>
+  <script type="module" src="preview.js"></script>
 </body>
 </html>
