correct default.css file path

--- a/preview/preview.html
+++ b/preview/preview.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ThreadPrinter - Preview</title>
   <link rel="stylesheet" href="preview.css">
-  <link rel="stylesheet" href="default.css" id="themeStylesheet">
+  <link rel="stylesheet" href="../themes/default.css" id="themeStylesheet">
 </head>
 <body>
   <!-- Toolbar -->
